# wanda

./: .gitignore  .gitmodules  CMakeLists.txt  README.rst  conanfile.py
.conan2/profiles/: debug  default  release
cmake/Modules/: CUTE.cmake  ConanDependencies.cmake  SystemDependencies.cmake  WandaTargets.cmake
include/wanda/: commander.hpp  control_connection.hpp  setting.hpp  wallpaper.hpp  xdg.hpp
source/: .clang-format  CMakeLists.txt
source/app/: CMakeLists.txt
source/app/src/: wandac.cpp  wandad.cpp
source/app/wandac/: CMakeLists.txt
source/app/wandac/include/wandac/: cli.hpp  listener.hpp
source/app/wandac/src/: cli.cpp  listener.cpp  main.cpp
source/app/wandad/: CMakeLists.txt
source/include/wanda/: command.hpp  control_interface.hpp  type_wrapper.hpp
source/lib/: CMakeLists.txt
source/lib/control/: CMakeLists.txt
source/lib/control/include/wanda/control/: commander.hpp  connection.hpp  interface.hpp
source/lib/control/src/: commander.cpp  connection.cpp  interface.cpp
source/lib/include/wanda/: command.hpp  commander.hpp  control_connection.hpp  control_interface.hpp  keyed.hpp  logging.hpp  magic.hpp  message.hpp  setting.hpp  xdg.hpp
source/lib/meta/include/wanda/meta/: deferred_failure.hpp  keyed.hpp  type_wrapper.hpp
source/lib/proto/: CMakeLists.txt
source/lib/proto/include/wanda/proto/: command.hpp  message.hpp  version.hpp
source/lib/proto/src/: command.cpp  message.cpp
source/lib/src/: command.cpp  commander.cpp  control_connection.cpp  control_interface.cpp  environment.cpp  filesystem.cpp  logging.cpp  message.cpp  setting.cpp  wallpaper.cpp  xdg.cpp
source/lib/std_ext/: CMakeLists.txt
source/lib/std_ext/include/wanda/std_ext/: expected.hpp  optional.hpp
source/lib/system/: CMakeLists.txt
source/lib/system/include/wanda/system/: environment.hpp  filesystem.hpp  logging.hpp  magic.hpp  setting.hpp  wallpaper.hpp  xdg.hpp
source/lib/system/src/: environment.cpp  filesystem.cpp  logging.cpp  setting.cpp  wallpaper.cpp  xdg.cpp
source/src/wanda/: commander.cpp  control_connection.cpp  control_interface.cpp  environment.cpp  logging.cpp  wallpaper.cpp  xdg.cpp
source/tests/: CMakeLists.txt
source/tests/app/wandac/: CMakeLists.txt
source/tests/app/wandac/src/: cli.cpp
source/tests/lib/system/: CMakeLists.txt
source/tests/lib/system/src/: xdg.cpp
source/tests/wanda/: driver.cpp
src/: command.cpp  command.hpp  commander.cpp  commander.hpp  control_connection.cpp  control_connection.hpp  control_interface.cpp  control_interface.hpp  deferred_failure.hpp  environment.cpp  environment.hpp  expected.hpp  filesystem.cpp  filesystem.hpp  keyed.hpp  logging.cpp  logging.hpp  main.cpp  message.cpp  message.hpp  optional.hpp  setting.cpp  setting.hpp  type_wrapper.hpp  variant.cpp  variant.hpp  wallpaper.cpp  wallpaper.hpp  wandac.cpp  wandad.cpp  xdg.cpp  xdg.hpp
src/wanda/: command.cpp  filesystem.cpp  message.cpp  setting.cpp  wallpaper.cpp  wandac.cpp  wandad.cpp
test_package/: CMakeLists.txt  conanfile.py  test.cpp
tests/: core_driver.cpp  test_suite_xdg.cpp
tests/wanda/: test_suite_xdg.cpp  test_suite_xdg.hpp
